[gd_scene load_steps=6 format=2]

[ext_resource path="res://TrafficLight.gd" type="Script" id=1]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="SpatialMaterial" id=4]
albedo_color = Color( 0.192157, 0.192157, 0.192157, 1 )

[sub_resource type="CylinderMesh" id=5]
material = SubResource( 4 )
top_radius = 0.5
bottom_radius = 0.5
height = 0.5

[sub_resource type="CapsuleShape" id=3]
height = 0.986833

[node name="TrafficLight" type="Spatial"]
script = ExtResource( 1 )

[node name="MeshBody" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 0.00376994, 0.999993, 0, -0.999993, 0.00376994, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 4 )

[node name="MeshGoFixture" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.21288, 0.872432 )
mesh = SubResource( 5 )

[node name="MeshCautionFixture" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0.127974, 0.872432 )
mesh = SubResource( 5 )

[node name="MeshStopFixture" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.942736, 0.872432 )
mesh = SubResource( 5 )

[node name="Go" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.26845, 1.3684 )
visible = false
light_color = Color( 0.168627, 0.866667, 0.0862745, 1 )
light_energy = 50.0

[node name="Caution" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.36758 )
visible = false
light_color = Color( 0.87451, 0.827451, 0.101961, 1 )
light_energy = 50.0

[node name="Stop" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.942736, 1.32295 )
light_color = Color( 0.937255, 0.12549, 0.12549, 1 )
light_energy = 50.0

[node name="LightTimer" type="Timer" parent="."]
one_shot = true

[node name="ClickArea" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="ClickArea"]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 3 )

[connection signal="timeout" from="LightTimer" to="." method="_on_LightTimer_timeout"]
[connection signal="input_event" from="ClickArea" to="." method="_on_ClickArea_input_event"]
